Dodano brisanje rezervacije
